--- a/src/frontEnd/portfolioApp.css
+++ b/src/frontEnd/portfolioApp.css
@@ -1,17 +1,27 @@
 h1 {
-    color: darkcyan;
-}
-
-p {
-    color: darkred;
-    background: -o-linear-gradient();
-    text-align: left;
-    font-size: 20px;
-    width: 45%;
-
+    color: #687418;
 }
 
 body {
     background-color: #ac9789;
     font-family: monospace;
 }
+
+.bio {
+    color: black;
+    text-align: left;
+    font-size: 20px;
+    width: 45%;
+}
+
+.pages a {
+    color: azure;
+}
+
+.pages :hover {
+    color: burlywood;
+}
+
+@font-face {
+    font-family: "BM_Space";
+    src: url('\Fonts\bm_space\BMSPA___.TTF') format('truetype');
