--- a/src/frontEnd/portfolioApp.css
+++ b/src/frontEnd/portfolioApp.css
@@ -11,15 +11,40 @@ body {
     color: black;
     text-align: left;
     font-size: 20px;
-    width: 45%;
+    width: 40%;
+    height: 35%;
+    border-width: 5px;
+    border-color: darkcyan;
+    box-sizing: border-box;
+    border-style: ridge;
+
+
+
 }
 
-.pages a {
+.pages_socials a {
     color: azure;
+    text-decoration: none;
 }
 
-.pages :hover {
+.pages_socials :hover {
     color: burlywood;
+}
+
+#lnin {
+    padding-left: 92%;
+}
+
+#linked_Image {
+    max-width: 100%;
+    height: 20px;
+
+}
+
+#itch {
+    max-width: 100%;
+    height: 20px;
+
 }
 
 @font-face {
