--- a/src/frontEnd/portfolioApp.css
+++ b/src/frontEnd/portfolioApp.css
@@ -5,6 +5,7 @@ h1 {
 body {
     background-color: #ac9789;
     font-family: monospace;
+    margin: 0;
 }
 
 .bio {
@@ -25,14 +26,18 @@ body {
 .pages_socials a {
     color: azure;
     text-decoration: none;
+    margin: 0;
 }
 
 .pages_socials :hover {
     color: burlywood;
 }
 
+
+
 #lnin {
     padding-left: 92%;
+
 }
 
 #linked_Image {
