--- a/src/frontEnd/portfolioApp.css
+++ b/src/frontEnd/portfolioApp.css
@@ -6,6 +6,7 @@ body {
     background-color: #ac9789;
     font-family: monospace;
     margin: 0;
+    flex-direction: column;
 }
 
 .bio {
@@ -18,15 +19,6 @@ body {
     border-color: darkcyan;
     box-sizing: border-box;
     border-style: ridge;
-
-
-
-}
-
-.pages_socials a {
-    color: azure;
-    text-decoration: none;
-    margin: 0;
 }
 
 .pages_socials :hover {
