--- a/src/portfolio.css
+++ b/src/portfolio.css
@@ -2,12 +2,7 @@ h1 {
     color: #687418;
 }
 
-body {
-    background-color: #ac9789;
-    font-family: monospace;
-    margin: 0;
-    flex-direction: column;
-}
+
 
 .bio {
     color: black;
@@ -21,27 +16,9 @@ body {
     border-style: ridge;
 }
 
-.pages_socials :hover {
-    color: burlywood;
-}
-
-
-
-#lnin {
-    padding-left: 92%;
-
-}
-
-#linked_Image {
-    max-width: 100%;
+.social_media {
     height: 20px;
-
-}
-
-#itch {
-    max-width: 100%;
-    height: 20px;
-
+    width: 20px;
 }
 
 @font-face {
