--- a/src/home.css
+++ b/src/home.css
@@ -4,7 +4,8 @@ h1 {
 
 
 
-.bio {
+#bio {
+    font-family: monospace;
     color: black;
     text-align: left;
     font-size: 20px;
@@ -19,9 +20,4 @@ h1 {
 .social_ico {
     height: 20px;
     width: 20.5px;
-}
-
-@font-face {
-    font-family: "BM_Space";
-    src: url('BMSPA___.TTF') format('truetype');
 }
