--- a/src/home.css
+++ b/src/home.css
@@ -2,7 +2,39 @@ h1 {
     color: #687418;
 }
 
+#header {
+    margin-top: 25px;
+    padding-bottom: 4px;
+    margin-bottom: 7px;
+    border-bottom: 1px solid rgb(160, 160, 160);
 
+}
+
+div {
+    display: block;
+    unicode-bidi: isolate;
+}
+
+#page {
+    width: 900px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 50px;
+}
+
+#social_media {
+    float: right;
+    margin-bottom: -5px;
+}
+
+a {
+    text-decoration: none;
+}
+
+.social_ico {
+    height: 20px;
+    width: 20px;
+}
 
 #bio {
     font-family: monospace;
@@ -15,9 +47,4 @@ h1 {
     border-color: darkcyan;
     box-sizing: border-box;
     border-style: ridge;
-}
-
-.social_ico {
-    height: 20px;
-    width: 20.5px;
 }
