--- a/src/home.css
+++ b/src/home.css
@@ -10,6 +10,10 @@ h1 {
 
 }
 
+.subMenu {
+    margin-bottom: 22px;
+}
+
 div {
     display: block;
     unicode-bidi: isolate;
@@ -36,7 +40,7 @@ a {
     width: 20px;
 }
 
-#bio {
+#bio_section {
     font-family: monospace;
     color: black;
     text-align: left;
