--- a/src/home.css
+++ b/src/home.css
@@ -82,10 +82,8 @@ a {
     font-size: 12px;
     width: 40%;
     height: 35%;
-    border-width: 5px;
-    border-color: darkcyan;
     box-sizing: border-box;
-    border-style: ridge;
+    position: relative;
 }
 
 @font-face {
