--- a/src/home.css
+++ b/src/home.css
@@ -1,6 +1,6 @@
 h1 {
     color: #0c1f52;
-    font-size: 14px;
+    font-size: 15px;
     font-family: 'sourcesansproreg';
     font-weight: normal;
 }
@@ -59,6 +59,10 @@ div {
     margin-left: auto;
     margin-right: auto;
     padding-bottom: 50px;
+}
+
+body {
+    background-color: lightgray;
 }
 
 #social_media {
