--- a/src/home.css
+++ b/src/home.css
@@ -1,5 +1,5 @@
 h1 {
-    color: #0c1f52;
+    color: #102a72;
     font-size: 15px;
     font-family: 'sourcesansproreg';
     font-weight: normal;
@@ -21,7 +21,7 @@ h1 {
 
 #title {
     font-size: 20px;
-    color: #0c1f52;
+    color: #102a72;
 }
 
 .subMenu {
