--- a/src/home.css
+++ b/src/home.css
@@ -86,15 +86,26 @@ a {
 #bio {
     margin-top: 15px;
     margin-right: 60px;
-    font-family: 'sourcesansproreg';
     color: black;
     text-align: left;
-    font-size: 12px;
     width: 40%;
     height: 35%;
     box-sizing: border-box;
     position: relative;
     padding-bottom: 20px;
+}
+
+#homeprojintro {
+    text-align: justify;
+    padding-bottom: 20px;
+    width: 40%;
+    height: 35%;
+}
+
+p {
+    font-family: 'sourcesansproreg';
+    font-size: 13.5px;
+
 }
 
 @font-face {
