--- a/src/home.css
+++ b/src/home.css
@@ -108,6 +108,13 @@ p {
 
 }
 
+#projectTitle {
+    color: #102a72;
+    font-size: 15px;
+    font-family: 'sourcesansproreg';
+    font-weight: normal;
+}
+
 @font-face {
     font-family: 'emotionengine';
     src: url('Fonts/emotion_engine/EmotionEngine.otf') format('opentype');
