js page n works section progress

--- a/src/home.css
+++ b/src/home.css
@@ -131,6 +131,10 @@ p {
     font-weight: normal;
 }
 
+#monadredir {
+    color: inherit;
+}
+
 .resumeBody {
     display: flex;
     position: relative;
