--- a/src/home.css
+++ b/src/home.css
@@ -118,6 +118,15 @@ a {
     position: relative;
 }
 
+#homemonad2 {
+    padding-top: 10px;
+    width: 500px;
+    height: 400px;
+    padding-bottom: 20px;
+    position: relative;
+}
+
+
 p {
     font-family: 'sourcesansproreg';
     font-size: 13.5px;
