--- a/src/home.css
+++ b/src/home.css
@@ -158,6 +158,84 @@ p {
     max-width: 300px;
 }
 
+.homepageSlideshow {
+    max-width: fit-content;
+    position: relative;
+    margin: auto;
+}
+
+.hpslides {
+    display: none;
+}
+
+.prev,
+.next {
+    cursor: pointer;
+    position: relative;
+    top: 50%;
+    width: auto;
+    margin-top: -22px;
+    padding: 16px;
+    color: #102a72;
+    font-weight: bold;
+    font-size: 13px;
+    transform: .06s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    -webkit-user-select: auto;
+}
+
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    font-family: 'sourcesansproreg';
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1;
+    }
+
+}
+
 @font-face {
     font-family: 'emotionengine';
     src: url('Fonts/emotion_engine/EmotionEngine.otf') format('opentype');
