--- a/src/home.css
+++ b/src/home.css
@@ -147,6 +147,12 @@ a {
     position: relative;
 }
 
+#homemonad3 {
+    padding-top: 10px;
+    height: 400px;
+    padding-bottom: 20px;
+    position: relative;
+}
 
 p {
     font-family: 'sourcesansproreg';
@@ -217,11 +223,11 @@ p {
 }
 
 .numbertext {
-    color: #f2f2f2;
-    font-size: 12px;
+    color: #102a72;
+    font-size: 12.5px;
     font-family: 'sourcesansproreg';
     padding: 8px 12px;
-    position: absolute;
+    position: relative;
     top: 0;
 }
 
