--- a/src/home.css
+++ b/src/home.css
@@ -133,7 +133,7 @@ a {
 
 #homemonad1 {
     padding-top: 10px;
-    width: 500px;
+    max-width: fit-content;
     height: 400px;
     padding-bottom: 20px;
     position: relative;
