--- a/src/home.css
+++ b/src/home.css
@@ -291,6 +291,10 @@ p {
     border-bottom: 1px solid rgb(160, 160, 160);
 }
 
+ul {
+    margin-bottom: 15px;
+}
+
 @font-face {
     font-family: 'emotionengine';
     src: url('Fonts/emotion_engine/EmotionEngine.otf') format('opentype');
