--- a/src/home.css
+++ b/src/home.css
@@ -333,14 +333,26 @@ hr {
     font-family: 'sourcesansproreg';
 }
 
+.contact-name:focus {
+    border: 2px solid #102a72;
+}
+
 .contact-email {
     font-family: 'sourcesansproreg';
+}
+
+.contact-email:focus {
+    border: 2px solid #102a72;
 }
 
 .contact-message {
     font-family: 'sourcesansproreg';
     width: 400px;
     height: 50px;
+}
+
+.contact-message:focus {
+    border: 2px solid #102a72;
 }
 
 button {
