--- a/src/home.css
+++ b/src/home.css
@@ -140,7 +140,9 @@ a {
     width: 40%;
     height: 35%;
 }
-
+.monadslideshow{
+    position: right;
+}
 #monadslideimg {
     padding-top: 10px;
     max-width: 540px;
