--- a/src/home.css
+++ b/src/home.css
@@ -154,7 +154,7 @@ p {
     color: #102a72;
     font-size: 15px;
     font-family: 'sourcesansproreg';
-    font-weight: normal;
+    font-weight: bold;
 }
 
 #projectText {
